fix static dir issue....hopefully this is the end

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Taehoon Song" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://taehoonsong.com/index.html" />
-    <meta property="og:image" content="https://taehoonsong.com/static/img/profile.jpeg" />
+    <meta property="og:image" content="https://taehoonsong.com/img/profile.jpeg" />
     <meta property="og:image:alt" content="Taehoon Song Profile Image" />
 
     <!-- Stylesheet -->
@@ -42,7 +42,7 @@
             class="header-image"
             width="256"
             height="256"
-            src="static/img/profile.jpeg"
+            src="img/profile.jpeg"
             alt="Taehoon Song Profile Image"
           />
           
@@ -468,7 +468,7 @@
                   <img
                     width="600"
                     height="338"
-                    src="static/img/proxmox-dashboard.png"
+                    src="img/proxmox-dashboard.png"
                     alt="Dashboard showing running containers and virtual machines"
                   />
                   <figcaption>Dashboard showing running containers and virtual machines</figcaption>
@@ -478,7 +478,7 @@
                   <img
                     width="600"
                     height="338"
-                    src="static/img/dashy.png"
+                    src="img/dashy.png"
                     alt="Dashboard of available applications and services"
                   />
                   <figcaption>Dashboard of available applications and services</figcaption>
