--- a/pages/resume.html
+++ b/pages/resume.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Taehoon Song" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://taehoonsong.com/resume.html" />
-    <meta property="og:image" content="https://taehoonsong.com/static/img/profile.jpeg" />
+    <meta property="og:image" content="https://taehoonsong.com/img/profile.jpeg" />
     <meta property="og:image:alt" content="Taehoon Song Profile Image" />
 
     <!-- Stylesheet -->
