--- a/pages/index.html
+++ b/pages/index.html
@@ -18,8 +18,8 @@
 
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon.png" />
-    <link rel="icon" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" sizes="16x16" href="img/favicon-16x16.png" />
+    <link rel="icon" size="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" size="16x16" href="img/favicon-16x16.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- Stylesheet -->
@@ -146,12 +146,6 @@
       </div>
     </header>
 
-    <div id="mySidenav" class="sidenav">
-      <a href="index.html" id="home">Home</a>
-      <a href="posts" id="blog">Blog</a>
-      <a href="resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="contact">Contact</a>
-    </div>
     <!-- Resume body -->
     <div class="page-content">
       <div class="container">
@@ -591,6 +585,13 @@
       </div>
     </div>
 
+    <div id="mySidenav" class="sidenav">
+      <a href="index.html" id="home">Home</a>
+      <a href="posts" id="blog">Blog</a>
+      <a href="resume.pdf" id="resume">Resume</a>
+      <a href="https://example.com" id="contact">Contact</a>
+    </div>
+    
     <footer class="page-footer">
       <div class="container">
         This work is marked
