--- a/pages/index.html
+++ b/pages/index.html
@@ -17,16 +17,16 @@
     <meta property="og:image:alt" content="Taehoon Song Profile Image" />
 
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon.png" />
-    <link rel="icon" size="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" size="16x16" href="img/favicon-16x16.png" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon.png" />
+    <link rel="icon" size="32x32" href="/img/favicon-32x32.png" />
+    <link rel="icon" size="16x16" href="/img/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/modern_normalize.css" />
-    <link rel="stylesheet" href="css/html5bp.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/sidenav.css" />
+    <link rel="stylesheet" href="/css/modern_normalize.css" />
+    <link rel="stylesheet" href="/css/html5bp.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/sidenav.css" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#fafafa" />
@@ -586,28 +586,14 @@
     </div>
 
     <div id="mySidenav" class="sidenav">
-      <a href="index.html" id="home">Home</a>
-      <a href="posts" id="blog">Blog</a>
-      <a href="resume.pdf" id="resume">Resume</a>
-      <a href="https://example.com" id="contact">Contact</a>
+      <a href="/index.html" id="home">Home</a>
+      <a href="/posts/index.html" id="blog">Blog</a>
+      <a href="/resume.pdf" id="resume">Resume</a>
+      <a href="/pets.html" id="pets">Pets</a>
     </div>
-    
+
     <footer class="page-footer">
-      <div class="container">
-        This work is marked
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/"
-          >CC0 1.0 Universal</a
-        ><img
-          src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        /><img
-          src="https://mirrors.creativecommons.org/presskit/icons/zero.svg"
-          alt=""
-          style="max-width: 1em; max-height: 1em; margin-left: 0.2em"
-        />
-        <!-- <p>© 2025 Taehoon Song. All rights reserved.</p> -->
-      </div>
+      <p>© 2025 Taehoon Song. All rights reserved.</p>
     </footer>
   </body>
 </html>
